{
    "name": "Controles 1",
    "maps": [
        {
            "name": "ControlesJugador",
            "id": "a847e328-c4d5-4150-a3f6-e05f85fb083b",
            "actions": [
                {
                    "name": "Disparar",
                    "type": "Button",
                    "id": "813f5fda-ef7c-47a9-9875-cad9a7f57638",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Seleccionar bola",
                    "type": "Button",
                    "id": "94bb7578-729c-44d3-a7d8-3de435efa9ad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Seleccionar bala",
                    "type": "Button",
                    "id": "da952873-693b-40c3-9b49-ce3ad9e5ff94",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Seleccionar slime",
                    "type": "Button",
                    "id": "aaec8b59-1bc0-4f15-9d2e-509a4bbc8550",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Seleccionar imanP",
                    "type": "Button",
                    "id": "8078fc08-225f-4aca-a28e-8f581f79d3c0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Seleccionar imanN",
                    "type": "Button",
                    "id": "ffd9edc8-5c24-42b4-a99f-abc8ac8c5e57",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Mirar",
                    "type": "PassThrough",
                    "id": "8f3ab38a-911c-4179-9d0f-f378ea19b664",
                    "expectedControlType": "Delta",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Moverse",
                    "type": "Value",
                    "id": "c25d9f67-7917-416a-82e2-84ff38f7d126",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "19b42be8-009a-42f2-ad28-f2b813eb8b0e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Disparar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ea36ea93-e7a0-4381-aed5-4a5773ced81f",
                    "path": "<Keyboard>/numpad1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Seleccionar bola",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bf963165-57f0-4c78-b088-0d1a78f2639d",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Seleccionar bola",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9051dc30-53eb-4e56-8e4c-c015cbe5a1cb",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Seleccionar bala",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9f11ccb8-7c2f-4b62-94d2-954e9e9fb9e8",
                    "path": "<Keyboard>/numpad2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Seleccionar bala",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ea9e727-556b-487a-9390-16a28103bf51",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Seleccionar slime",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1637f5de-7357-42ab-831f-538f83d6ef60",
                    "path": "<Keyboard>/numpad3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Seleccionar slime",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "399fe6fd-7083-4158-b3e0-af285512e3c7",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Seleccionar imanP",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1cb17ae9-4fac-4756-b030-1789631b7350",
                    "path": "<Keyboard>/numpad4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Seleccionar imanP",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8372ca87-34d6-44d1-97ab-96eb68c43d6a",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Seleccionar imanN",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0a4fccbe-3fa2-4cc6-bd81-d509b6a9d699",
                    "path": "<Keyboard>/numpad5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Seleccionar imanN",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13fcc495-da8c-4806-8679-3bee6d8446e1",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mirar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "e9891178-b548-4e86-ae5b-9c0ef12ff382",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moverse",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "6b675461-4d64-4659-a924-f34945d2c510",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moverse",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "4d0d39c9-3e89-40ad-b3a0-61c6f129520d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moverse",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "63615435-f9b9-44ff-a334-4d029812d788",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moverse",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "89e8aace-da9c-4d29-83b5-a1a16aedd3a5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moverse",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Controles Proyectil",
            "id": "49e06e09-547d-4635-aa6c-2d2384867637",
            "actions": [
                {
                    "name": "Borrar",
                    "type": "Button",
                    "id": "5b3cdd5b-1cd9-4f23-a923-298b574a78f8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1e8bedcf-9e74-4687-a95e-f96d7f82f235",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Borrar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "12672a5e-daee-47a1-a63c-a0c73bae69e3",
                    "path": "<Keyboard>/numpad0",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Borrar",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}